# qmcp

./: .dockerignore  .gitignore  README.md  docker-compose.flows.yml  main.py  pyproject.toml  quickstart.md
docker/: flows.Dockerfile
docs/: ROADMAP.md  agentframework.md  architecture.md  client.md  contributing.md  deployment.md  human_in_loop.md  overview.md  tools.md
docs/adrs/: pydantic-ai-comparison.md
docs/agentframework/: mixins.md  models.md  overview.md  runners.md  topologies.md
docs/integrations/: index.md  pydantic-ai.md
examples/flows/: approved_deploy.py  local_agent_chain.py  local_dev_db.py  local_llm.py  local_mcp.py  local_qc_gauntlet.py  local_release_notes.py  simple_plan.py
qmcp/: __init__.py  __main__.py  cli.py  config.py  logging.py  metrics.py  middleware.py  server.py
qmcp/agentframework/: 00-MASTER-PLAN.md  01-MODELS.md  02-MIXINS.md  03-TOPOLOGIES.md  04-RUNNERS.md  05-TESTS.md  README.md  __init__.py  mixins.py  models.py  runners.py  topologies.py
qmcp/agentframework/models/: __init__.py  base.py  enums.py  registry.py
qmcp/client/: __init__.py  mcp_client.py
qmcp/db/: __init__.py  engine.py  models.py
qmcp/integrations/: __init__.py
qmcp/schemas/: __init__.py  mcp.py
qmcp/tools/: __init__.py  builtin.py  registry.py
tests/: __init__.py  conftest.py  test_agentframework_mixins.py  test_agentframework_models.py  test_cli_cookbook.py  test_client.py  test_db.py  test_examples_smoke.py  test_hitl.py  test_metrics.py  test_pydantic_ai_integration.py  test_server.py  test_tools.py
(+28 files in other folders)
