[project]
name = "qmcp"
version = "0.1.0"
description = "A spec-aligned Model Context Protocol (MCP) server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "click>=8.3.1",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.31",
    "structlog>=25.1.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
qmcp = "qmcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
flows = [
    "metaflow>=2.12.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
